Fixed spacing of the new chat icon

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -184,10 +184,9 @@
     position: absolute;
     width: 40px;
     height: 40px;
-    margin-left: 25px;
-    margin-right: 25px;
+    left: 7px;
     top: 10px;
-    color: #FFFFFF;
+    color: #ffffff;
     border-radius: 4px;
     z-index: 1;
 }
